Ajustando o CRUD de Médicos