@@ -3,9 +3,13 @@ package com.clinicaMedica.clinicaMedica.service;
 import com.clinicaMedica.clinicaMedica.Repository.EspecialidadeRespository;
 import com.clinicaMedica.clinicaMedica.Repository.MedicoRepository;
 import com.clinicaMedica.clinicaMedica.model.especialidade.Especialidade;
+import com.clinicaMedica.clinicaMedica.model.especialidade.EspecialidadeRequestDto;
+import com.clinicaMedica.clinicaMedica.model.especialidade.EspecialidadeResponseDto;
 import com.clinicaMedica.clinicaMedica.model.medico.Medico;
 import com.clinicaMedica.clinicaMedica.model.medico.MedicoRequestDto;
 import com.clinicaMedica.clinicaMedica.model.medico.MedicoResponseDto;
+import jakarta.transaction.Transactional;
+import org.hibernate.Hibernate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -13,9 +17,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 
@@ -28,59 +30,82 @@ public class MedicoService {
     private EspecialidadeRespository especialidadeRespository;
 
 
+
     public MedicoResponseDto cadastrar(MedicoRequestDto medicoRequestDto) {
         var medico = new Medico();
+
         medico.setNome(medicoRequestDto.nome());
         medico.setCrm(medicoRequestDto.crm());
-        medico.setEspecialidades(this.listaDeEspecialidades(medicoRequestDto.especialidadesIds()));
+        Set<Especialidade> especialidades = especialidadeRespository.findAllById(medicoRequestDto.especialidadesIds())
+                        .stream().collect(Collectors.toSet());
+        medico.setEspecialidades(especialidades);
+
         medicoRepository.save(medico);
 
-        return new MedicoResponseDto(medico);
+        return toDto(medico);
     }
+
 
     public Page<MedicoResponseDto> listar(Pageable pageable) {
 
-        List<Medico> medicos = medicoRepository.findAll();
 
-        var medicosResponseDto = medicos.stream()
-                                .map(medico -> new MedicoResponseDto(medico))
-                                .toList();
+          List<MedicoResponseDto> medicos = medicoRepository.findAll(pageable)
+                  .stream().map(this::toDto).collect(Collectors.toList());
 
-        return new PageImpl<>(medicosResponseDto, pageable, medicosResponseDto.size());
+
+          return new PageImpl<>(medicos, pageable, medicos.size());
 
     }
 
-    public MedicoResponseDto listarPorId(Long id) {
-        Optional<Medico> medico = medicoRepository.findById(id);
 
-        return  new MedicoResponseDto(medico.get());
+
+    public MedicoResponseDto listarPorId(Long id) {
+
+          var medico = medicoRepository.findById(id).orElseThrow(()-> new RuntimeException("Médico não encontrado"));
+
+          return toDto(medico);
 
     }
 
     public MedicoResponseDto alterar(Long id, MedicoRequestDto medicoRequestDto) {
-        Optional<Medico> medico = medicoRepository.findById(id);
-        medico.get().setNome(medicoRequestDto.nome());
-        medico.get().setCrm(medicoRequestDto.crm());
-        medico.get().setEspecialidades(this.listaDeEspecialidades(medicoRequestDto.especialidadesIds()));
 
-        medicoRepository.save(medico.get());
+        var medico = medicoRepository.findById(id).orElseThrow(()->new RuntimeException("Médico não encontrado"));
+        medico.setNome(medicoRequestDto.nome());
+        medico.setCrm(medicoRequestDto.crm());
+        Set<Especialidade> especialidades = especialidadeRespository.findAllById(medicoRequestDto.especialidadesIds())
+                .stream().collect(Collectors.toSet());
+        medico.setEspecialidades(especialidades);
 
-        return new MedicoResponseDto(medico.get());
+        medicoRepository.save(medico);
+
+        return toDto(medico);
     }
 
     public void excluir(Long id) {
 
-        Optional<Medico> medico = medicoRepository.findById(id);
+        var medico = medicoRepository.findById(id).orElseThrow(()->new RuntimeException("Médico não encontrado"));
 
-        medicoRepository.delete(medico.get());
+        medicoRepository.delete(medico);
+
     }
 
-    private Set<Especialidade> listaDeEspecialidades(Set<Long> especialidadesIds ){
+//    private Set<Especialidade> listaDeEspecialidades(Set<Long> especialidadesIds ){
+//
+//        return especialidadesIds.stream()
+//                .map(id -> especialidadeRespository.findById(id)
+//                        .orElseThrow(() -> new RuntimeException("Especialidades não encontradas")))
+//                .collect(Collectors.toSet());
+//
+//    }
 
-        return especialidadesIds.stream()
-                .map(id -> especialidadeRespository.findById(id)
-                        .orElseThrow(() -> new RuntimeException("Especialidades não encontradas")))
+    private MedicoResponseDto toDto(Medico medico) {
+
+        Set<String> especialidades = medico.getEspecialidades().stream()
+                .map(Especialidade::getDescricao)
                 .collect(Collectors.toSet());
+
+        return new MedicoResponseDto(medico.getId(), medico.getNome(), medico.getCrm(), especialidades);
+
     }
 
 
